gitops/k8s/tools-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools-ingress
  namespace: boutique
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rabbit.test.chellrach.com
    secretName: rabbit-tls
  rules:
  - host: rabbit.test.chellrach.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
